--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "rollup": "^2.79.1",
     "viem": "^1.16.2",
     "wagmi": "^1.4.3",
